src/main/antlr4/myLang.g4
grammar myLang;

@header{
package my.company;
}

lang:   object
    |   array
    ;

object
    :   '{' pair (';' pair)* '}'    # AnObject
    |   '{' '}'                     # EmptyObject
    ;

array
    :   '(' value (';' value)* ')'  # ArrayOfValues
    |   '(' ')'                     # EmptyArray
    ;

pair:   STRING '=' value ;

value
    :   STRING		# String
    |   NUMBER		# Atom
    |   object  	# ObjectValue
    |   array  		# ArrayValue
    |   'true'		# Atom
    |   'false'		# Atom
    |   'null'		# Atom
    ;

 COMMENT
     : '/*' .*? '*/' -> skip
 ;

 LINE_COMMENT
     : '//' ~[\r\n]* -> skip
 ;

LCURLY : '{' ;
LBRACK : '(' ;
STRING :  '"' (ESC | ~["\\])* '"' ;

fragment ESC :   '\\' (["\\/bfnrt] | UNICODE) ;
fragment UNICODE : 'u' HEX HEX HEX HEX ;
fragment HEX : [0-9a-fA-F] ;

NUMBER
    :   '-'? INT '.' INT EXP?   // 1.35, 1.35E-9, 0.3, -4.5
    |   '-'? INT EXP            // 1e10 -3e4
    |   '-'? INT                // -3, 45
    ;
fragment INT :   '0' | '1'..'9' '0'..'9'* ; // no leading zeros
fragment EXP :   [Ee] [+\-]? INT ; // \- since - means "range" inside [...]

WS  :   [ \t\n\r]+ -> skip ;
